--- a/index.html
+++ b/index.html
@@ -19,34 +19,57 @@
                 <ul class='d-flex justify-content-around'>
                     <li>
                         <a href='#' class='p-2'>ABOUT</a>
-                        <div></div>    
+                        <div class='nav-effect'></div>  
                     </li>
                     <li>
                         <a href='#' class='p-2'>PROJECTS</a>
-                        <div></div> 
+                        <div class='nav-effect'></div> 
                     </li>
                     <li>
                         <a href='#' class='p-2'>TECHNICAL SKILLS</a>
-                        <div></div> 
+                        <div class='nav-effect'></div> 
                     </li>
                     <li>
                         <a href='#' class='p-2'>CONTACT</a>
-                        <div></div> 
+                        <div class='nav-effect'></div> 
                     </li>
                 </ul>
             </nav>
         </div>
     </header>
     <main>
-        <section class='about container-fluid d-flex align-items-center justify-content-between pt-5'>
-            <div class="about-img">  
+        <section class='about container-fluid d-flex align-items-center justify-content-between pt-5 pb-5'>
+            <div class='row'>
+                <div class="about-img"></div>
+                <div id='loading-bar' class='mt-2'></div>
             </div>
             <div class='content'>
                 <h1>About</h1>
                 <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Vel, temporibus odio labore asperiores quisquam eligendi accusantium laudantium cumque, culpa ipsum, veritatis minus possimus dignissimos repudiandae corporis. Ex numquam rem necessitatibus!</p>
             </div>
         </section>
-        
+        <hr>
+        <section class='project container-fluid d-flex align-items-center justify-content-between pt-5 pb-5'>
+            <div>
+                <h1>Projects</h1>
+                <div class="project-gallery mt-4 mb-4"></div>
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quae nisi eius non voluptate expedita, voluptates iure vitae, inventore beatae laudantium officia ipsam? Nostrum aliquid amet molestiae magni magnam cumque voluptatum!</p>
+            </div>
+        </section>
+        <hr>
+        <section class='technical container-fluid d-flex align-items-center justify-content-between pt-5 pb-5'>
+            <div class="tech-container">
+                <h1 class='text-center'>Technical Skills</h1>
+                <div class="circle"></div>
+            </div>
+        </section>
+        <hr>
+        <section class='contact container-fluid d-flex align-items-center justify-content-between pt-5 pb-5'>
+            <div>
+                <h1>Contact</h1>
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quae nisi eius non voluptate expedita, voluptates iure vitae, inventore beatae laudantium officia ipsam? Nostrum aliquid amet molestiae magni magnam cumque voluptatum!</p>
+            </div>
+        </section>
     </main>
     <script src='app.js'></script>
      <!-- jQuery, Popper.js, Bootstrap JS -->
