--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Andy Aylward: Front End Web Developer</title>
     <link rel="stylesheet" href="./css/app.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/css?family=IBM+Plex+Sans+Condensed:400,400i|IBM+Plex+Sans:100,100i,200,200i,400,400i,700" rel="stylesheet">
 </head>
 <body>
     <header>
@@ -18,19 +20,19 @@
             <nav class='w-100'>
                 <ul class='d-flex justify-content-around'>
                     <li>
-                        <a href='#' class='p-2'>ABOUT</a>
+                        <a href='#about' class='p-2'>ABOUT</a>
                         <div class='nav-effect'></div>  
                     </li>
                     <li>
-                        <a href='#' class='p-2'>PROJECTS</a>
+                        <a href='#project' class='p-2'>PROJECTS</a>
                         <div class='nav-effect'></div> 
                     </li>
                     <li>
-                        <a href='#' class='p-2'>TECHNICAL SKILLS</a>
+                        <a href='#technical' class='p-2'>TECHNICAL SKILLS</a>
                         <div class='nav-effect'></div> 
                     </li>
                     <li>
-                        <a href='#' class='p-2'>CONTACT</a>
+                        <a href='#contact' class='p-2'>CONTACT</a>
                         <div class='nav-effect'></div> 
                     </li>
                 </ul>
@@ -38,7 +40,8 @@
         </div>
     </header>
     <main>
-        <section class='about container-fluid d-flex align-items-center justify-content-between pt-5 pb-5'>
+        <!-- ABOUT -->
+        <section id='about' class='about container-fluid d-flex align-items-center justify-content-between pt-5 pb-5'>
             <div class='row'>
                 <div class="about-img"></div>
                 <div id='loading-bar' class='mt-2'></div>
@@ -49,22 +52,39 @@
             </div>
         </section>
         <hr>
-        <section class='project container-fluid d-flex align-items-center justify-content-between pt-5 pb-5'>
+        <!-- PROJECTS -->
+        <section id='project' class=container-fluid d-flex align-items-center justify-content-between pt-5 pb-5'>
             <div>
                 <h1>Projects</h1>
-                <div class="project-gallery mt-4 mb-4"></div>
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quae nisi eius non voluptate expedita, voluptates iure vitae, inventore beatae laudantium officia ipsam? Nostrum aliquid amet molestiae magni magnam cumque voluptatum!</p>
+                <div class="d-flex align-items-center">
+                    <div class="previous"><button class='btn btn-light' id='previous'><i class="fas fa-angle-double-left fa-2x"></i></button></div>
+                    <div id='project-gallery' class="project-gallery mt-4 mb-4"></div>
+                    <div class="next"><button class='btn btn-light' id='next'><i class="fas fa-angle-double-right fa-2x"></i></button></div>
+                </div>
+                <a id='projectLink' href='https://andy-aylward-cpnt-assignment-4-fpswjrnnoq.now.sh' target='_blank'><h4 class='text-center' id='projectHeading'></h4></a>
+                <p class='text-center' id='projectInfo'></p>
             </div>
         </section>
         <hr>
-        <section class='technical container-fluid d-flex align-items-center justify-content-between pt-5 pb-5'>
+        <!-- TECHNICAL SKILLS -->
+        <section id="technical" class='container-fluid d-flex align-items-center justify-content-between pt-5 pb-5'>
             <div class="tech-container">
-                <h1 class='text-center'>Technical Skills</h1>
-                <div class="circle"></div>
+                <h2 class='text-center'>Technical Skills</h2>
+                <div class="circle">
+                        <div class="html-img"></div>
+                        <div class="ps-img"></div>
+                        <div class="placeholder3"></div>
+                        <div class="css-img"></div>
+                        <div class="js-img"></div>
+                        <div class="jq-img"></div>
+                        <div class="wp-img"></div>
+                        <div class="php-img"></div>  
+                </div>
             </div>
         </section>
         <hr>
-        <section class='contact container-fluid d-flex align-items-center justify-content-between pt-5 pb-5'>
+        <!-- CONTACT -->
+        <section id='contact' class='container-fluid d-flex align-items-center justify-content-between pt-5 pb-5'>
             <div>
                 <h1>Contact</h1>
                 <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quae nisi eius non voluptate expedita, voluptates iure vitae, inventore beatae laudantium officia ipsam? Nostrum aliquid amet molestiae magni magnam cumque voluptatum!</p>
