--- a/index.html
+++ b/index.html
@@ -41,21 +41,36 @@
     </header>
     <main>
         <!-- ABOUT -->
-        <section id='about' class='about container-fluid d-flex align-items-center justify-content-between pt-5 pb-5'>
+        <!-- <section id='about' class='about container-fluid d-flex align-items-center justify-content-around pt-5 pb-5 mt-5 mb-5'>
             <div class='row'>
-                <div class="about-img"></div>
+                <div id='about-img' class="about-img"></div>
                 <div id='loading-bar' class='mt-2'></div>
             </div>
             <div class='content'>
                 <h1>About</h1>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Vel, temporibus odio labore asperiores quisquam eligendi accusantium laudantium cumque, culpa ipsum, veritatis minus possimus dignissimos repudiandae corporis. Ex numquam rem necessitatibus!</p>
+                <p>My name is Andy Aylward and I am currently a <a href='https://www.sait.ca/programs-and-courses/full-time-studies/certificates/web-developer-fast-track' target='_blank'>Web Development</a> student at SAIT. This is my portfolio page that I am actively working on to showcase some of my design techniques and coding skills. Please note that this page is a work in progress and is not yet complete, I intend on adding more technical design aspects, additional features, links to more of my projects, and full responsiveness.</p>
             </div>
-        </section>
+        </section> -->
+        <section id='about' class='about contianer-fluid pt-5 pb-5 mt-5 mb-5'>
+
+            <div class="row">
+                <div class='col-12 col-md-6'>
+                    <div id='about-img' class="about-img mx-auto"><div id='loading-bar' class='mt-2'></div> </div>
+                   
+                </div>
+            
+                <div class='col-12 col-md-6 content'>
+                    <h1 class='pt-5'>About</h1>
+                    <p>My name is Andy Aylward and I am currently a <a href='https://www.sait.ca/programs-and-courses/full-time-studies/certificates/web-developer-fast-track' target='_blank'>Web Development</a> student at SAIT. This is my portfolio page that I am actively working on to showcase some of my design techniques and coding skills. Please note that this page is a work in progress and is not yet complete, I intend on adding more technical design aspects, additional features, links to more of my projects, and full responsiveness.</p>
+                </div>
+            </div>
+            </section>
         <hr>
         <!-- PROJECTS -->
-        <section id='project' class=container-fluid d-flex align-items-center justify-content-between pt-5 pb-5'>
+        <section id='project' class='container-fluid pt-5 pb-5 mt-5 mb-5'>
             <div>
                 <h1>Projects</h1>
+                <p class='text-center'>Use the arrows below to scroll through some of my past projects, you can also click the project title to open the page.</p>
                 <div class="d-flex align-items-center">
                     <div class="previous"><button class='btn btn-light' id='previous'><i class="fas fa-angle-double-left fa-2x"></i></button></div>
                     <div id='project-gallery' class="project-gallery mt-4 mb-4"></div>
@@ -67,32 +82,41 @@
         </section>
         <hr>
         <!-- TECHNICAL SKILLS -->
-        <section id="technical" class='container-fluid d-flex align-items-center justify-content-between pt-5 pb-5'>
+        <section id="technical" class='container-fluid pt-5 pb-5 mt-5 mb-5'>
             <div class="tech-container">
                 <h2 class='text-center'>Technical Skills</h2>
                 <div class="circle">
-                        <div class="html-img"></div>
-                        <div class="ps-img"></div>
-                        <div class="placeholder3"></div>
-                        <div class="css-img"></div>
-                        <div class="js-img"></div>
-                        <div class="jq-img"></div>
-                        <div class="wp-img"></div>
-                        <div class="php-img"></div>  
+                    <div class="html-img"></div>
+                    <div class="ps-img"></div>
+                    <div class="placeholder3"></div>
+                    <div class="css-img"></div>
+                    <div class="js-img"></div>
+                    <div class="jq-img"></div>
+                    <div class="wp-img"></div>
+                    <div class="php-img"></div>  
                 </div>
             </div>
         </section>
         <hr>
         <!-- CONTACT -->
-        <section id='contact' class='container-fluid d-flex align-items-center justify-content-between pt-5 pb-5'>
+        <section id='contact' class='container-fluid pt-5 pb-5 mt-5 mb-5'>
             <div>
                 <h1>Contact</h1>
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quae nisi eius non voluptate expedita, voluptates iure vitae, inventore beatae laudantium officia ipsam? Nostrum aliquid amet molestiae magni magnam cumque voluptatum!</p>
+                <p>Please feel free to contact me via email at aylward709@gmail.com or by telephone at 709-746-8920</p>
             </div>
         </section>
     </main>
+    <footer class='d-flex justify-content-between align-items-center'>
+        <div class='ml-5'>
+            Website designed and coded by Andy Aylward
+        </div>
+        <div class='mr-5'>
+            <i class="fab fa-github-square fa-3x mr-3">
+            </i>
+            <i class="fab fa-linkedin fa-3x mr-3"></i>
+        </div>
+    </footer>
     <script src='app.js'></script>
-     <!-- jQuery, Popper.js, Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
