--- a/index.html
+++ b/index.html
@@ -2,15 +2,18 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Andy Aylward: Front End Web Developer</title>
     <link rel="stylesheet" href="./css/app.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/css?family=Quicksand" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=IBM+Plex+Sans+Condensed:400,400i|IBM+Plex+Sans:100,100i,200,200i,400,400i,700" rel="stylesheet">
+    <meta name="viewport" content="width=device-width, user-scalable=no, maximum-scale=1.0, initial-scale=1.0">
 </head>
 <body>
+    <!-- HEADER -->
     <header>
         <div class="banner">
             <div class='content d-flex flex-column'>
@@ -39,32 +42,20 @@
             </nav>
         </div>
     </header>
+    <!-- MAIN -->
     <main>
         <!-- ABOUT -->
-        <!-- <section id='about' class='about container-fluid d-flex align-items-center justify-content-around pt-5 pb-5 mt-5 mb-5'>
-            <div class='row'>
-                <div id='about-img' class="about-img"></div>
-                <div id='loading-bar' class='mt-2'></div>
-            </div>
-            <div class='content'>
-                <h1>About</h1>
-                <p>My name is Andy Aylward and I am currently a <a href='https://www.sait.ca/programs-and-courses/full-time-studies/certificates/web-developer-fast-track' target='_blank'>Web Development</a> student at SAIT. This is my portfolio page that I am actively working on to showcase some of my design techniques and coding skills. Please note that this page is a work in progress and is not yet complete, I intend on adding more technical design aspects, additional features, links to more of my projects, and full responsiveness.</p>
-            </div>
-        </section> -->
         <section id='about' class='about contianer-fluid pt-5 pb-5 mt-5 mb-5'>
-
             <div class="row">
                 <div class='col-12 col-md-6'>
-                    <div id='about-img' class="about-img mx-auto"><div id='loading-bar' class='mt-2'></div> </div>
-                   
+                    <div id='about-img' class="about-img mx-auto"><div id='loading-bar' class='mt-2'></div></div>
                 </div>
-            
                 <div class='col-12 col-md-6 content'>
                     <h1 class='pt-5'>About</h1>
-                    <p>My name is Andy Aylward and I am currently a <a href='https://www.sait.ca/programs-and-courses/full-time-studies/certificates/web-developer-fast-track' target='_blank'>Web Development</a> student at SAIT. This is my portfolio page that I am actively working on to showcase some of my design techniques and coding skills. Please note that this page is a work in progress and is not yet complete, I intend on adding more technical design aspects, additional features, links to more of my projects, and full responsiveness.</p>
+                    <p>My name is Andy Aylward and I am currently a <a href='https://www.sait.ca/programs-and-courses/full-time-studies/certificates/web-developer-fast-track' target='_blank'>Web Development</a> student at SAIT. This is my portfolio page that I am actively working on to showcase some of my design techniques and coding skills. Please note that this page is a work in progress and is not yet complete.</p>
                 </div>
             </div>
-            </section>
+        </section>
         <hr>
         <!-- PROJECTS -->
         <section id='project' class='container-fluid pt-5 pb-5 mt-5 mb-5'>
@@ -106,14 +97,14 @@
             </div>
         </section>
     </main>
+    <!-- FOOTER -->
     <footer class='d-flex justify-content-between align-items-center'>
-        <div class='ml-5'>
+        <div class='ml-md-5 ml-3 author'>
             Website designed and coded by Andy Aylward
         </div>
-        <div class='mr-5'>
-            <i class="fab fa-github-square fa-3x mr-3">
-            </i>
-            <i class="fab fa-linkedin fa-3x mr-3"></i>
+        <div class='mr-md-5 mr-3'>
+            <a href='https://github.com/andyaylward' target='_blank'><i class="fab fa-github-square mr-3"></i></a>
+            <a href='https://github.com/andyaylward' target='_blank'><i class="fab fa-linkedin"></i></a>
         </div>
     </footer>
     <script src='app.js'></script>
