fixed button placement

--- a/index.html
+++ b/index.html
@@ -62,10 +62,12 @@
             <div>
                 <h1>Projects</h1>
                 <p class='text-center'>Use the arrows below to scroll through some of my past projects, you can also click the project title to open the page.</p>
-                <div class="d-flex align-items-center">
-                    <div class="previous"><button class='btn btn-light' id='previous'><i class="fas fa-angle-double-left fa-2x"></i></button></div>
-                    <div id='project-gallery' class="project-gallery mt-4 mb-4"></div>
-                    <div class="next"><button class='btn btn-light' id='next'><i class="fas fa-angle-double-right fa-2x"></i></button></div>
+                <div class="d-flex align-items-center justify-content-center">
+                    <div class="previous mr-3"><button class='btn btn-light' id='previous'><i class="fas fa-angle-double-left fa-2x"></i></button></div>
+                    <a href='#' id='projectLink' target='_blank'>
+                        <div id='project-gallery' class="project-gallery mt-4 mb-4"></div>
+                    </a>
+                    <div class="next ml-3"><button class='btn btn-light' id='next'><i class="fas fa-angle-double-right fa-2x"></i></button></div>
                 </div>
                 <a id='projectLink' href='https://andy-aylward-cpnt-assignment-4-fpswjrnnoq.now.sh' target='_blank'><h4 class='text-center' id='projectHeading'></h4></a>
                 <p class='text-center' id='projectInfo'></p>
