--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         <section id='project' class='container-fluid pt-5 pb-5 mt-5 mb-5'>
             <div>
                 <h1>Projects</h1>
-                <p class='text-center'>Use the arrows below to scroll through some of my past projects, you can also click the project title to open the page.</p>
+                <p class='text-center'>Use the arrows below to scroll through some of my past projects, you can also click the project to open the page.</p>
                 <div class="d-flex align-items-center justify-content-center">
                     <div class="previous mr-3"><button class='btn btn-light' id='previous'><i class="fas fa-angle-double-left fa-2x"></i></button></div>
                     <a href='#' id='projectLink' target='_blank'>
@@ -69,7 +69,7 @@
                     </a>
                     <div class="next ml-3"><button class='btn btn-light' id='next'><i class="fas fa-angle-double-right fa-2x"></i></button></div>
                 </div>
-                <a id='projectLink' href='https://andy-aylward-cpnt-assignment-4-fpswjrnnoq.now.sh' target='_blank'><h4 class='text-center' id='projectHeading'></h4></a>
+                <a id='projectLink' href='https://site-dthlaossqm.now.sh/#' target='_blank'><h4 class='text-center' id='projectHeading'></h4></a>
                 <p class='text-center' id='projectInfo'></p>
             </div>
         </section>
@@ -94,8 +94,50 @@
         <!-- CONTACT -->
         <section id='contact' class='container-fluid pt-5 pb-5 mt-5 mb-5'>
             <div>
-                <h1>Contact</h1>
-                <p>Please feel free to contact me via email at aylward709@gmail.com or by telephone at 709-746-8920</p>
+                <form action="https://docs.google.com/forms/d/e/1FAIpQLScNA63OArPvjskbagxu6WqPilOti2iv-C4RYm7UAFayX0siIA/formResponse" target="_self" id="bootstrapForm" method="POST">
+                    <fieldset>
+                        <h1>Contact</h1><br><p>Please leave your name and email address, along with your inquiry, and I will get back to you as soon as possible.</p>
+                    </fieldset>
+                    <div class="row">
+                        <div class="col-sm-6">
+                            <fieldset>
+                                <legend for="">Email</legend>
+                                <div class="form-group">
+                                    <input id="emailAddress" type="email" name="emailAddress" class="form-control" required>
+                                </div>
+                            </fieldset>
+                            <!-- Field type: "short" id: "1633920210" -->
+                            <fieldset>
+                                <legend for="1633920210">Name</legend>
+                                <div class="form-group">
+                                    <input id="2005620554" type="text" name="entry.2005620554" class="form-control" required>
+                                </div>
+                            </fieldset>
+                            <!-- Field type: "short" id: "1770822543" -->
+                            <fieldset>
+                                <legend for="1770822543">Phone number (optional)</legend>
+                                <div class="form-group">
+                                    <input id="1166974658" type="text" name="entry.1166974658" class="form-control" >
+                                </div>
+                            </fieldset>
+                        </div>
+                    </div>
+                    <!-- Field type: "paragraph" id: "1846923513" -->
+                    <div class="row">
+                        <div class="col-md-9">
+                            <fieldset>
+                                <legend for="1846923513">Inquiry</legend>
+                                <div class="form-group">
+                                    <textarea rows='6' id="839337160" name="entry.839337160" class="form-control" required></textarea>
+                                </div>
+                            </fieldset>
+                        </div>
+                    </div>
+                    <input type="hidden" name="fvv" value="1">
+                    <input type="hidden" name="fbzx" value="-1271248878162997658">
+                    <input type="hidden" name="pageHistory" value="0">
+                    <input id='submit' class="btn btn-dark" type="submit" value="Submit">
+                </form>
             </div>
         </section>
     </main>
@@ -109,7 +151,10 @@
             <a href='https://github.com/andyaylward' target='_blank'><i class="fab fa-linkedin"></i></a>
         </div>
     </footer>
+    <!-- SCRIPTS -->
     <script src='app.js'></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.form/4.2.2/jquery.form.min.js" integrity="sha256-2Pjr1OlpZMY6qesJM68t2v39t+lMLvxwpa8QlRjJroA=" crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
