--- a/index.html
+++ b/index.html
@@ -94,6 +94,7 @@
         <!-- CONTACT -->
         <section id='contact' class='container-fluid pt-5 pb-5 mt-5 mb-5'>
             <div>
+                <!-- <iframe name="hidden_iframe" id="hidden_iframe" style="display:none;" onload="if(submitted){window.location='../thank-you/'}"></iframe> -->
                 <form action="https://docs.google.com/forms/d/e/1FAIpQLScNA63OArPvjskbagxu6WqPilOti2iv-C4RYm7UAFayX0siIA/formResponse" target="_self" id="bootstrapForm" method="POST">
                     <fieldset>
                         <h1>Contact</h1><br><p>Please leave your name and email address, along with your inquiry, and I will get back to you as soon as possible.</p>
@@ -136,7 +137,7 @@
                     <input type="hidden" name="fvv" value="1">
                     <input type="hidden" name="fbzx" value="-1271248878162997658">
                     <input type="hidden" name="pageHistory" value="0">
-                    <input id='submit' class="btn btn-dark" type="submit" value="Submit">
+                    <input id='submit' target='_blank' class="btn btn-dark" type="submit" value="Submit">
                 </form>
             </div>
         </section>
@@ -151,12 +152,13 @@
             <a href='https://github.com/andyaylward' target='_blank'><i class="fab fa-linkedin"></i></a>
         </div>
     </footer>
+
     <!-- SCRIPTS -->
-    <script src='app.js'></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.form/4.2.2/jquery.form.min.js" integrity="sha256-2Pjr1OlpZMY6qesJM68t2v39t+lMLvxwpa8QlRjJroA=" crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>  
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+    <script src='app.js'></script>
 </body>
 </html>
